# OpenJVS

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: build.yml
docs/: 85-openjvs.rules  guide.md  hat-quickstart.md  openjvs.service  openjvs@.service
docs/openjvs/: config  rotary
docs/openjvs/devices/: arduino-llc-gun4ir-pro-micro-p1  arduino-llc-gun4ir-pro-micro-p2  at-translated-set-2-keyboard.disabled  bigben-interactive-daija-arcade-stick  brook-p4-wired-gamepad-v1  etps-2-elantech-touchpad.disabled  g25-racing-wheel  g25-racing-wheel.disabled  generic-joystick  generic-keyboard  hjz-mayflash-wiimote-pc-adapter-mouse  holdchip-usb-gaming-keyboard.disabled  jjknown  light-gun-p-1-just-to-share-fun  logitech--logitech-momo-force-  logitech-g29-driving-force-racing-wheel  logitech-logitech-driving-force  microsoft-sidewinder-precision-racing-wheel-usb-version-1.0.disabled  microsoft-x-box-360-pad.disabled  microsoft-x-box-one-s-pad  nintendo-wii-remote  nintendo-wii-remote.disabled  shanwan-ps3-gamepad.disabled  shanwan-ps3-pc-gamepad  shanwan-ps3-pc-gamepad.disabled  sony-computer-entertainment-wireless-controller.disabled  sony-corp.-felica-s320-[pasori]  sony-interactive-entertainment-wireless-controller  sony-playstation-r-3-controller  thrustmaster-t.flight-hotas-  toodles-2008-cthulhu-mult  ultimarc-aimtrak  ultimarc-ultimarc-joystick  ultimarc-ultimarc-screen-in  ultimarc-ultimarc-screen-out  usb-optical-mouse  xbox-360-wireless-receiver
docs/openjvs/games/: 18-wheeler  after-burner-climax  airline-pilots  alien-front  crazy-taxi  crazy-taxi-high-roller  dream-raiders  f-zero-ax  f-zero-ax-test  f355  final-furlong-2  generic  generic-analogue  generic-driving  generic-shooting  ghost-squad  harley-king-of-the-road  hummer  initial-d  jambo-safari  king-of-route  king-of-route-66  lets-go-island  lets-go-jungle-special  mario-cart  monkey-ball  ninja-assault  operation-ghost  outrun  outrun-chihiro  outrun_lb  r-tuned  rambo  sega-race-tv  tekken  (+11 more)
include/: config.h  debug.h  device.h  ffb.h  input.h  io.h  openjvs.h
src/: cli.c  cli.h  config.c  config.h  debug.c  debug.h  device.c  device.h  ffb.c  input.c  input.h  io.c  io.h  jvs.c  jvs.h  openjvs.c  rotary.c  rotary.h  threading.c  threading.h  version.h.in
src/console/: cli.c  config.c  config.h  debug.c  debug.h  watchdog.c  watchdog.h
src/controller/: input.c  input.h  threading.c  threading.h
src/ffb/: ffb.c  ffb.h  wheel.c  wheel.h
src/hardware/: device.c  device.h  rotary.c  rotary.h
src/jvs/: io.c  io.h  jvs.c  jvs.h
tests/: test.c
(+9 files in other folders)
